wembed-snn/src/bindings.rs

/* automatically generated by rust-bindgen 0.72.0 */

#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct WembedSnnIndex {
    _unused: [u8; 0],
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct WembedSnnResult {
    pub indices: *mut usize,
    pub count: usize,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of WembedSnnResult"][::std::mem::size_of::<WembedSnnResult>() - 16usize];
    ["Alignment of WembedSnnResult"][::std::mem::align_of::<WembedSnnResult>() - 8usize];
    ["Offset of field: WembedSnnResult::indices"]
        [::std::mem::offset_of!(WembedSnnResult, indices) - 0usize];
    ["Offset of field: WembedSnnResult::count"]
        [::std::mem::offset_of!(WembedSnnResult, count) - 8usize];
};
impl Default for WembedSnnResult {
    fn default() -> Self {
        let mut s = ::std::mem::MaybeUninit::<Self>::uninit();
        unsafe {
            ::std::ptr::write_bytes(s.as_mut_ptr(), 0, 1);
            s.assume_init()
        }
    }
}
unsafe extern "C" {
    pub fn wembed_snn_create_index(
        points: *const f32,
        num_points: usize,
        dimensions: usize,
    ) -> *mut WembedSnnIndex;
}
unsafe extern "C" {
    pub fn wembed_snn_destroy_index(index: *mut WembedSnnIndex);
}
unsafe extern "C" {
    pub fn wembed_snn_radius_search(
        index: *mut WembedSnnIndex,
        query_point: *const f32,
        radius: f32,
    ) -> WembedSnnResult;
}
unsafe extern "C" {
    pub fn wembed_snn_free_result(result: *mut WembedSnnResult);
}
unsafe extern "C" {
    pub fn wembed_snn_point_count(index: *const WembedSnnIndex) -> usize;
}
unsafe extern "C" {
    pub fn wembed_snn_dimensions(index: *const WembedSnnIndex) -> usize;
}
